[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/skeleton_prototype.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/skeleton_walk_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/skeleton_walk_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/speechbubble_skeleton.png" type="Texture" id=5]
[ext_resource path="res://Assets/skeleton_throw_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/skeleton_throw_3.png" type="Texture" id=7]
[ext_resource path="res://Assets/skeleton_throw_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sounds/swoosh_badminton.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/collect.ogg" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "throw",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49.0305, 101.848 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 40.986
height = 123.249

[node name="Player" type="AnimatedSprite"]
position = Vector2( -0.609894, -77.8898 )
scale = Vector2( 0.7555, 0.7555 )
frames = SubResource( 1 )
animation = "throw"
frame = 2
playing = true
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="SpeechBubble" type="Sprite" parent="."]
visible = false
position = Vector2( -12.6489, -189.733 )
texture = ExtResource( 5 )

[node name="AudioThrow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -2.261

[node name="AudioCollect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -7.536

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 32
collision_mask = 256

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="." to="." method="_on_Player_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
